# pngmeta

./: .gitignore  .pypirc.example  BUILD_SYSTEM.md  CONTRIBUTING.md  DOCS_SITE_SUMMARY.md  GITHUB_PAGES_SETUP.md  Makefile  PROJECT_SUMMARY.md  PUBLISH.md  QUICKREF.md  QUICKSTART.md  README.md  RELEASING.md  VERSION_QUICK_START.md  pyproject.toml
docs/: BADGE_REFRESH.md  CNAME  README.md  index.html  preview.sh  script.js  styles.css
examples/: README.md  basic_usage.py  demo_all_operations.py
pngmeta/: __init__.py  exceptions.py  pngmeta.py
tests/: __init__.py  test_pngmeta.py
