[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pngmeta"
dynamic = ["version"]
description = "A Python library for reading and writing PNG metadata (tEXt, iTXt, zTXt chunks and XMP)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Unlicense"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Graphics",
    "License :: Public Domain",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["png", "metadata", "exif", "xmp", "itxt", "text", "chunks", "image"]
dependencies = []

[project.urls]
Homepage = "https://github.com/yourusername/pngmeta"
Issues = "https://github.com/yourusername/pngmeta/issues"
Source = "https://github.com/yourusername/pngmeta"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]
publish = [
    "hatch>=1.7.0",
    "twine>=4.0.0",
]

[tool.hatch.version]
path = "pngmeta/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["pngmeta"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]